syntax = "proto3";

package matchingengine.v1;

option go_package = "github.com/Marwan051/tradding_platform_game/matching_engine/api/proto/v1;matchingenginev1";

// MatchingEngineService defines RPCs for the matching engine.
//
// This service exposes health checks and (future) order-matching
// operations used by clients to interact with the matching engine.
service MatchingEngineService {
  // Health returns the current health status of the service.
  rpc Health(HealthRequest) returns (HealthResponse);
}

message HealthRequest {}

// HealthRequest is an empty request used to query the service health.
message HealthRequest {}

// HealthResponse reports the health status of the service.
message HealthResponse {
  // status contains a short, human-readable status (for example: "ok").
  string status = 1;
}
