syntax = "proto3";

package trading.matching_engine;


import "proto/v1/common/types.proto";

option go_package = "github.com/Marwan051/tradding_platform_game/proto/gen/go/v1/matching_engine";

// MatchingEngine provides core order matching operations.
service MatchingEngine {
  // PlaceOrder submits a new order to the matching engine.
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  // CancelOrder cancels an existing order by ID.
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  // HealthCheck returns the current health status of the engine.
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}


// PlaceOrderRequest contains the parameters to place a new order.
message PlaceOrderRequest {
  string user_id = 1;
  string bot_id = 2;
  string stock_ticker = 3;
  common.types.OrderType order_type = 4;
  common.types.OrderSide side = 5;
  int64 quantity = 6;
  int64 limit_price_cents = 7;
  string client_order_id = 8;
  int64 available_balance_cents = 9; // For MARKET BUY: buyer's available cash to cap spend
}

// PlaceOrderResponse returns the result of placing an order.
message PlaceOrderResponse {
  bool success = 1;
  string order_id = 2;
  bool was_filled_immediately = 3;
  int64 filled_quantity = 4;
  int64 average_fill_price_cents = 5;
  string error_message = 6;
  common.types.ErrorCode error_code = 7;
}

// CancelOrderRequest contains the parameters to cancel an order.
message CancelOrderRequest {
  string order_id = 1;
  string stock_ticker=2;
  common.types.OrderSide side =  3;
  string user_id = 4;
  string bot_id = 5;
}

// CancelOrderResponse returns the result of cancelling an order.
message CancelOrderResponse {
  bool success = 1;
  string order_id = 2;
  string error_message = 3;
}

// HealthCheckRequest is an empty request for health checks.
message HealthCheckRequest {}

// HealthCheckResponse returns health and basic engine stats.
message HealthCheckResponse {
  bool is_healthy = 1;
  int64 orders_processed = 2;
  int64 uptime_seconds = 3;
}
